now that caption has the correct z-index, improve its style

--- a/css/main.css
+++ b/css/main.css
@@ -106,15 +106,13 @@ body>header {
 .imagenCabecera>figcaption {
   position: absolute;
   top: 0;
-  padding: 2px;
+  padding: 3px 5px 5px 3px;
+  color: lightgrey;
   font-size: 0.8em;
   text-shadow: 1px 1px 1px black;
-  border-color: white;
-  border-style: solid;
-  border-width: 0 1px 1px 0;
   border-radius: 0 0 5px 0;
-  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(80, 80, 80, 0.5));
-  backdrop-filter: blur(30px) brightness(70%);
+  background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(80, 80, 80, 0.3));
+  backdrop-filter: blur(2.5px) brightness(70%);
   z-index: 1;
 }
 
